crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__allow-locals-named-like-hooks.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/allow-locals-named-like-hooks.js
---
import { c as _c } from "react/compiler-runtime";
import { makeObject_Primitives, Stringify } from "shared-runtime";
function Component(props) {
	const $ = _c(3);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = makeObject_Primitives();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const useFeature = t0;
	let x;
	if (useFeature) {
		let t1;
		if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
			t1 = [useFeature + useFeature].push(-useFeature);
			$[1] = t1;
		} else {
			t1 = $[1];
		}
		x = t1;
	}
	const y = useFeature;
	const z = useFeature.useProperty;
	let t1;
	if ($[2] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = <Stringify val={useFeature}>{x}{y}{z}</Stringify>;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
