crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__allow-props-named-like-hooks.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/allow-props-named-like-hooks.js
---
import { c as _c } from "react/compiler-runtime";
import { Stringify } from "shared-runtime";
function Component(t0) {
	const $ = _c(8);
	const { useFeature } = t0;
	let x;
	if (useFeature) {
		const t1 = useFeature + useFeature;
		let t2;
		if ($[0] !== t1 || $[1] !== useFeature) {
			t2 = [t1].push(-useFeature);
			$[0] = t1;
			$[1] = useFeature;
			$[2] = t2;
		} else {
			t2 = $[2];
		}
		x = t2;
	}
	const y = useFeature;
	const z = useFeature.useProperty;
	let t1;
	if ($[3] !== useFeature || $[4] !== x || $[5] !== y || $[6] !== z) {
		t1 = <Stringify val={useFeature}>{x}{y}{z}</Stringify>;
		$[3] = useFeature;
		$[4] = x;
		$[5] = y;
		$[6] = z;
		$[7] = t1;
	} else {
		t1 = $[7];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ useFeature: { useProperty: true } }]
};
