crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__error.bail.rules-of-hooks-8503ca76d6f8.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/error.bail.rules-of-hooks-8503ca76d6f8.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Hooks: Hooks must be called at the top level in the body of a function component or custom hook, and may not be called within function expressions. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)", labels: [LabeledSpan { label: None, span: Span { start: 238, end: 259 }, primary: false }], help: Some("Cannot call hook within a function expression"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
